--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,7 +34,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 10;}
+    z-index: 1000;}
 header p {
     color: white;
     font-size: 30px;}
@@ -46,6 +46,12 @@ header nav ul li a {
 header nav ul li a:hover {
     background-color: rgba(128, 128, 128, 0.515);}
 .logo {height: 80px;}
+.menu-icon {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;}
+.menu-hamburguesa-checkbox {
+    display: none;}
 
 
 /*-----FOOTER-----*/
@@ -111,29 +117,29 @@ footer i:hover {
     align-items: center;}
 .contenedor-tarjetas {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;}
 .tarjeta-concepto {
     background-color: rgba(255, 255, 255, 0.255);
     border: 2px solid white;
-    width: 300px;
-    height: 350px;
-    margin: 50px;
-    padding: 10px;
+    width: 25%;
+    height: 20em;
+    margin: 2em;
+    padding: 0.5em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;}
 .tarjeta-concepto h3 { 
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
     color: aqua;
     font-size:25px;}
 .tarjeta-concepto p{ 
     color: black;
-    margin-bottom: 10px;
+    margin-bottom: 1em;
     font-size: 18px !important;
     background-color: white;
-    padding: 10px;
+    padding: 0.5em;
     border-radius: 5px;}
 .tarjeta-concepto a {
     color: white;
@@ -202,13 +208,13 @@ footer i:hover {
 .boton a:hover {
     background-color: grey;}
 .contenedor-video {
-    box-shadow: inset 5px 5px 20px rgba(72, 72, 72, 0.949);
+    border-left: 15px groove grey;
     width: 40%;
     height: 100%;}
 .video {
     width: 100%;      
     height: 100%;
-    padding: 20px;}
+    padding: 2rem;}
 
 /*------TOPICOS--------*/
 
@@ -244,8 +250,7 @@ footer i:hover {
     position:sticky;
     top: 80px;
     background: white;
-    padding: 10px;
-    height: fit-content;}
+    height: fit-content !important;}
 .descripcion {
     display: grid;
     grid-template-columns: repeat (auto-fill, minmax (200px,1fr));
@@ -253,23 +258,26 @@ footer i:hover {
 
 /*Sección Lista de Tópicos*/
 #lista-topicos {
-    padding: 10px;}
+    padding: 4px;}
 #lista-topicos h2 {
     color: white;
     background-color: rgba(0, 0, 0, 0.56);
     font-size: 20px;
     text-align: center;
-    padding: 10px;
-    margin-bottom: 10px;}
+    padding: 4px;
+    margin-bottom: 4px;}
 #lista-topicos ol {
-    padding: 10px;
+    padding: 4px;
     text-align: center;}
 #lista-topicos ol li {
-    margin: 10px;
+    margin: 4px;
     padding-left: 15%;
     padding-right: 15%;
     border: 2px solid gray;
     background-color: rgba(0, 255, 255, 0.403);}
+#lista-topicos ol li:hover {
+    background-color: rgba(146, 146, 146, 0.647);
+    border-color: aqua;}
 #lista-topicos ol li a {
     color: black;}
 
@@ -493,7 +501,7 @@ footer i:hover {
 .tarjeta-psi p img {
     border: none;}
 
-/*--------CACERCA DE--------*/
+/*--------ACERCA DE--------*/
 
 /*Sección Poratada Acerca De*/
 .portada-acerca-de {
@@ -511,12 +519,153 @@ footer i:hover {
     color: white;
     margin-top: 5px;}
 .nosotros {
-    height: 400px;
+    height: auto;
     text-align: center;
     padding: 80px;}
 .nosotros h2 {
     color: black;}
 .nosotros p {
     font-size: 20px;
-    margin-left: 200px;
-    margin-right: 200px;}
+    margin-left: 8em;
+    margin-right: 8em;}
+
+/*MEDIA QUERIES 
+---Index----
+    1120 Tarjetas concepto achicar tamaño
+    917 tarjetas concepto stretch y achicar titulos
+    740 - Achicar psicotópicos para que entre el nav
+    */
+
+@media screen and (max-width: 1100px) {
+/*Index*/
+.contenedor-general .boton {
+    margin-top: 5em;}
+.contenedor-tarjetas {
+    display: flex;
+    justify-content: center;}
+.tarjeta-concepto {
+    margin: 1em;
+    min-height: initial;
+    width: 30%;}}
+
+@media screen and (max-width: 917px) {
+/*Index*/
+.hero h1 {
+    font-size: 2em;}
+.hero p {
+    font-size: 0.75em;}
+.topicos h2 {
+    font-size: 1.5em;}
+.casos h2 {
+    font-size: 1.5em;}
+.contenedor-tarjetas {
+    display: flex;
+    justify-content: space-evenly;}
+.tarjeta-concepto {
+    margin: 0;}
+.tarjeta-concepto p {
+    font-size: 1em !important;}
+.contenedor-casos {
+    height: auto;
+    display: flex;
+    flex-direction: column;}
+.bloque-casos-catarsis {
+    width: 100%;
+    margin-bottom: 1em;}
+.carousel {
+    width: 80%;
+    margin-bottom: 0.5em;}
+.contenedor-video {
+    width: 100%;
+    height: 300px;
+    border-top: 15px groove grey;
+    border-left: 0 ;}
+.video {
+    width: 100%;
+    height: 100%;}
+/*Topicos*/
+.presentacion-topicos h1 {
+    font-size: 2em;}
+.presentacion-topicos p {
+    font-size: 1.5em;}
+#lista-topicos {
+    padding: 2.5px;
+    }
+#lista-topicos h2 {
+    font-size: 18px;
+    padding: 2.5px;
+    margin-bottom: 2.5px;}
+#lista-topicos ol {
+    padding: 2.5px;}
+#lista-topicos ol li {
+    margin: 3px;
+    }
+.grid-contenedor {
+    grid-template-columns: 200px 1fr;
+    gap: 2px;
+    }
+.descripcion-topicos {
+    margin-top: 20px;
+    gap: 5px;
+    padding: 2px;
+    }
+.tarjeta-topico {
+    margin-top: 10px;
+    width: auto;
+}
+
+
+/*Acerca de*/
+.nosotros p {
+    margin-left: 0.5em;
+    margin-right: 0.5em;}}
+
+@media screen and (max-width: 755px) {
+header {
+    height: max-content;}
+header p {
+    margin-left: 2em;}
+header nav ul {
+    display: none;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.666);
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 30%;
+    height: 300px;
+    text-align: center;}
+header nav ul li {
+    margin-top: 1em;
+    margin-bottom: 1em;}
+header nav ul li a {
+    color: black;
+    padding: 1em;}
+.menu-hamburguesa-checkbox:checked ~ nav ul {
+    display: flex;}
+.menu-icon {
+    display: block;
+    color: white;
+    padding: 0.3em;
+    border: 1px solid rgb(75, 75, 75);
+    box-shadow: inset 0 0 10px aqua;
+    margin-left: auto;}
+/*Index*/
+.topicos h2 {
+    padding: 1em;}
+.contenedor-tarjetas {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;}
+.tarjeta-concepto {
+    margin: 1em;
+    height: 40%;
+    width: 80%;}
+.contenedor-general .boton {
+    margin-top: 2em;
+    margin-bottom: 2em;}
+.casos h2 {
+    padding: 1em;}
+.casos h3 {
+    padding: 0.50em;}
+}
