--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,8 +34,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1000;}
+    z-index: 1100;}
 header p {
+    margin-bottom: 0 !important;
     color: white;
     font-size: 30px;}
 header nav ul {
@@ -64,8 +65,7 @@ footer {
     justify-content: space-evenly;
     align-content: center;} 
 footer a {
-    margin-top: 1rem;
-}
+    margin-top: 1rem;}
 footer i {
     font-size: 50px;
     color: white;
@@ -239,6 +239,8 @@ footer i:hover {
 .presentacion-topicos p {
     color: white;
     font-size: 30px;}
+.dropdown-contenedor {
+    display: none;}
 
 /*Sección GRID*/
 .grid-contenedor {
@@ -523,18 +525,14 @@ footer i:hover {
     text-align: center;
     padding: 80px;}
 .nosotros h2 {
+    background-color: aqua;
     color: black;}
 .nosotros p {
     font-size: 20px;
     margin-left: 8em;
     margin-right: 8em;}
 
-/*MEDIA QUERIES 
----Index----
-    1120 Tarjetas concepto achicar tamaño
-    917 tarjetas concepto stretch y achicar titulos
-    740 - Achicar psicotópicos para que entre el nav
-    */
+/*---MEDIA QUERIES---*/
 
 @media screen and (max-width: 1100px) {
 /*Index*/
@@ -589,8 +587,7 @@ footer i:hover {
 .presentacion-topicos p {
     font-size: 1.5em;}
 #lista-topicos {
-    padding: 2.5px;
-    }
+    padding: 2.5px;}
 #lista-topicos h2 {
     font-size: 18px;
     padding: 2.5px;
@@ -598,23 +595,17 @@ footer i:hover {
 #lista-topicos ol {
     padding: 2.5px;}
 #lista-topicos ol li {
-    margin: 3px;
-    }
+    margin: 3px;}
 .grid-contenedor {
     grid-template-columns: 200px 1fr;
-    gap: 2px;
-    }
+    gap: 2px;}
 .descripcion-topicos {
     margin-top: 20px;
     gap: 5px;
-    padding: 2px;
-    }
+    padding: 2px;}
 .tarjeta-topico {
     margin-top: 10px;
-    width: auto;
-}
-
-
+    width: auto;}
 /*Acerca de*/
 .nosotros p {
     margin-left: 0.5em;
@@ -668,4 +659,56 @@ header nav ul li a {
     padding: 1em;}
 .casos h3 {
     padding: 0.50em;}
-}
+/*Topicos*/
+.lista {
+    display: none;}
+.grid-contenedor {
+    display: flex;
+    flex-direction: column;}
+.dropdown-contenedor {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5em;}
+.dropdown-menu {
+    max-height: 300px; 
+    overflow-y: auto;}
+.dropdown-item:hover {
+    background-color: rgba(0, 255, 255, 0.833);}}
+
+@media screen and (max-width: 460px) {
+header {
+    height: 60px;}
+.logo {
+    height: 60px;}
+header p {
+    font-size: 20px !important;}
+footer {
+    height: 60px;}
+footer a {
+    margin-top: 0.2em;
+    margin-bottom: 0.5em;}
+footer i {
+    font-size: 40px;}
+/*Acerca de*/
+.nosotros {
+    padding: 2em;}
+.nosotros p {
+    margin-left: 0;
+    margin-right: 0;}}
+
+@media screen and (max-width: 400px) {
+/*Index*/
+.hero h1 {
+    font-size: 1.5em;}
+/*Topicos*/
+.presentacion-topicos {
+    justify-content: flex-start;}
+.presentacion-topicos h1 {
+    font-size: 1.5em;}
+.presentacion-topicos p {
+    font-size: 1.2em;}
+/*Acerca de*/
+.portada-acerca-de h1 {
+    font-size: 2em;}
+.portada-acerca-de p {
+    font-size: 1.2em;}}
