--- a/csss/estilos.css
+++ b/csss/estilos.css
@@ -219,7 +219,7 @@ header nav ul li a:hover {
   align-items: center;
 }
 .casos .bloque-casos-catarsis h3 {
-  font-size: 1.5em;
+  font-size: 20px;
   font-style: italic;
   text-align: center;
   background-color: rgba(0, 255, 255, 0.344);
@@ -454,7 +454,7 @@ header nav ul li a:hover {
 
 .portada-contacto {
   height: 100vh;
-  background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(/img/topicos-img.gif);
+  background-image: url(../img/contacto.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -463,12 +463,8 @@ header nav ul li a:hover {
 }
 .portada-contacto h1 {
   color: black;
-  font-weight: 800;
-  text-shadow: 0 0 10px white;
-  margin-bottom: 5em;
-  margin-left: 20%;
-  margin-right: 20%;
-  background-color: rgba(0, 0, 0, 0.34);
+  margin-bottom: 200px;
+  background-color: rgba(0, 0, 0, 0.397);
   padding: 50px;
 }
 .portada-contacto p {
@@ -476,11 +472,13 @@ header nav ul li a:hover {
   font-size: 25px;
   text-transform: uppercase;
   background-color: rgba(0, 0, 0, 0.397);
+  margin-left: 100px;
+  margin-right: 100px;
   padding: 35px;
 }
 
 .contacto {
-  height: 500px;
+  height: 400px;
   text-align: center;
 }
 .contacto h2 {
@@ -499,46 +497,35 @@ header nav ul li a:hover {
   align-items: flex-start;
   padding: 20px;
 }
-.contacto form .form-item:nth-child(5) textarea {
-  height: 80px;
-  width: 120%;
-  font-size: 15px;
-}
 .contacto form .form-item label {
   font-size: 1.5rem;
 }
 .contacto form .form-item .input {
   height: 30px;
   width: 80%;
-  box-shadow: 4px 4px 10px aqua;
+  border-color: aqua;
 }
-.contacto form .enviar input {
-  color: white;
-  padding: 0.5em 2em 0.5em 2em;
-  background-color: black;
-  border: 2px solid grey;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px black;
-  margin-top: 5em;
-  transition: 2s;
+.contacto form .form-item textarea {
+  height: 80px;
+  width: 600px;
+  font-size: 15px;
 }
-.contacto form .enviar input:hover {
-  background-color: grey;
-  padding: 0.5em 4em 0.5em 4em;
+.contacto form div:nth-child(6) {
+  width: 100px;
+  margin: 50px 280px;
 }
 
 .ayuda {
   min-height: 800px;
-  background-image: url(/img/cerebro.gif);
+  background-image: url(../img/fondo-ayuda.gif);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 .ayuda h2 {
   font-size: 30px;
   margin-bottom: 20px;
   background-color: rgba(0, 0, 0, 0.307);
-  box-shadow: inset 0 0 20px white;
   padding: 50px;
   text-align: center;
 }
@@ -551,52 +538,32 @@ header nav ul li a:hover {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 2em;
-  border: 20px groove rgba(0, 0, 0, 0.545);
+  margin: 50px;
+  padding: 50px;
+  border: 30px groove rgba(0, 0, 0, 0.545);
 }
 .ayuda div .tarjeta-psi {
-  width: 25%;
-  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border: 10px groove rgba(0, 0, 0, 0.545);
 }
 .ayuda div .tarjeta-psi h3 {
-  font-size: 25px !important;
-  font-weight: 700 !important;
-  text-align: center;
-  background: #ffffff;
-  background: linear-gradient(88deg, rgb(255, 255, 255) 18%, rgb(166, 159, 159) 47%, rgb(186, 232, 232) 70%);
-  padding: 1rem;
-  width: 100%;
-  text-shadow: 5px 5px 10px black;
+  font-size: 25px;
+  margin: 10px;
 }
 .ayuda div .tarjeta-psi img {
   margin: 10px;
-  border-radius: 5px;
-  box-shadow: 4px 4px 10px black;
-}
-.ayuda div .tarjeta-psi .matricula {
-  margin-top: 1em;
-  padding: 0.5rem 3rem 0.5rem 3rem;
-  border: 5px solid aqua;
-  border-radius: 10px;
+  border: 2px solid black;
 }
 .ayuda div .tarjeta-psi p {
   font-size: 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: stretch;
   align-items: center;
 }
-.ayuda div .tarjeta-psi p i {
-  font-size: 1.5em;
-  margin-right: 1rem;
-  transition: 1.5s;
-}
-.ayuda div .tarjeta-psi p i:hover {
-  color: aqua;
+.ayuda div .tarjeta-psi p img {
+  border: none;
 }
 
 .portada-acerca-de {
