--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -8,7 +8,7 @@ footer {
     align-content: center;
 
     a {
-        margin-top: 1rem;
+        margin-top: 1rem !important;
         i {
             font-size: 50px;
             color: white;
