--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -14,6 +14,7 @@ header {
     p {
     margin-bottom: 0 !important;
     color: black;
+    text-shadow: 0 0 5px #0ff, 0 0 10px rgb(54, 115, 115), 0 0 20px #0ff;
     font-size: 40px;}
 
     .menu-icon {
