--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -12,41 +12,65 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: normal;
+
     h1 {
         background-color: rgba(0, 0, 0, 0.479);
         padding: 20px;
-        margin-bottom: 0 !important;}
+        margin-bottom: 0 !important;
+        animation: slidein 2s ease-in-out;
+    }
+
     p {
         font-size: 35px;
         margin-left: 20px;
-        margin-right: 20px;}
+        margin-right: 20px;
+    }
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-left: 0;
+        width: 100%;
+    }
 }
 
 //*Sección Tópicos
-.tópicos {
-    min-height: 800px;
-    background-image: url(/img/topicos-img.gif);
+.topicos {
+    min-height: 650px;
+    background-image: url(/img/otro.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+
     h2 {
         background-color: black;
         padding: 40px;
         text-align: center;
-        box-shadow: inset 0 0 20px white;}
+        box-shadow: inset 0 0 20px white;
+    }
+
     .contenedor-general {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        .contenedor-tajetas {
+
+        .contenedor-tarjetas {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            margin-top: 2em;
+
             .tarjeta-concepto {
-                background-color: rgba(255, 255, 255, 0.255);
-                border: 2px solid white;
+                background-color: rgba(0, 0, 0, 0.13);
+                border: 2px solid black;
+                box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.714);
                 width: 25%;
                 height: 20em;
                 margin: 2em;
@@ -55,24 +79,39 @@
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: center;
+
                 h3 {
                     margin-bottom: 0.5em;
-                    color: aqua;
-                    font-size:25px;}
+                    color: rgb(2, 19, 19);
+                    font-size: 25px;
+                }
+
                 p {
                     color: black;
                     margin-bottom: 1em;
                     font-size: 18px !important;
                     background-color: white;
                     padding: 0.5em;
-                    border-radius: 5px;}
+                    border-radius: 5px;
+                    box-shadow: 4px 4px 20px aquamarine;
+                }
+
                 a {
                     color: white;
                     background-color: black;
-                    width: 100%;
+                    width: 80%;
                     text-align: center;
                     border-radius: 4px;
-                    padding: 2px;}
+                    padding: 2px;
+                    transition: 2s;
+
+                    &:hover {
+                        background-color: aquamarine;
+                        color: black;
+                        border: 2px solid grey;
+                        width: 100%;
+                    }
+                }
             }
         }
     }
@@ -81,45 +120,66 @@
 //*Sección Casos
 .casos {
     height: auto;
-    background: linear-gradient(to top, rgb(15, 15, 15),white);
+    background-image: url(/img/relojarena.png);
+    background-position: right;
+    background-size: auto;
+    background-repeat: no-repeat;
+
     h2 {
         background-color: gray;
         padding: 30px;
         text-align: center;
         margin-bottom: 0 !important;
-        box-shadow: inset 0 0 20px white;}
+        box-shadow: inset 0 0 20px white;
+    }
+
     .bloque-casos-catarsis {
         width: 100% !important;
-        min-height: 800px;
+        min-height: 650px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+
         h3 {
-            font-size: 20px;
+            font-size: 1.5em;
             font-style: italic;
             text-align: center;
             background-color: rgba(0, 255, 255, 0.344);
             width: 100%;
-            padding:25px;
+            padding: 25px;
             margin-bottom: 2rem;
-            margin-top: 2rem;}
+            margin-top: 1em;
+        }
+
         .carousel {
-            width: 80%;
+            width: 70%;
             margin-bottom: 20px;
+            align-self: flex-start;
+            margin-left: 20px;
+            transition: 3s;
+            &:hover {
+                width: 80%;
+            }
+
             .carousel-inner {
                 .carousel-caption {
                     width: 100%;
                     left: 0;
+
                     h5 {
                         font-size: 2rem;
-                        background-color: rgba(0, 0, 0, 0.407);;
-                        margin-bottom: 0;}
+                        background-color: rgba(0, 0, 0, 0.407);
+                        ;
+                        margin-bottom: 0;
+                    }
+
                     p {
                         font-size: 1.5rem;
-                        background-color: rgba(0, 0, 0, 0.407);}
-                }    
-            }    
+                        background-color: rgba(0, 0, 0, 0.407);
+                    }
+                }
+            }
         }
     }
 }
@@ -129,7 +189,7 @@
 //*Sección Presentacion Tópicos
 .presentacion-topicos {
     height: 100vh;
-    background-image: url(../img/topicos-portada-mente.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/persona-mente.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -138,15 +198,18 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+
     h1 {
         color: white;
         font-size: 50px;
-        background-color: rgba(0, 0, 0, 0.373);
         padding: 40px;
-        margin-bottom: 20px;}
+        margin-bottom: 20px;
+    }
+
     p {
         color: white;
-        font-size: 30px;}
+        font-size: 30px;
+    }
 }
 
 //*Sección Explorador Tópicos
@@ -162,32 +225,39 @@
     grid-template-columns: 300px 1fr;
     gap: 20px;
     align-items: start;
+
     .lista {
-        position:sticky;
+        position: sticky;
         top: 80px;
         background: white;
         height: fit-content !important;
         padding: 4px;
+
         h2 {
             color: white;
-        background-color: rgba(0, 0, 0, 0.56);
-        font-size: 20px;
-        text-align: center;
-        padding: 4px;
-        margin-bottom: 4px;}
+            background-color: rgba(0, 0, 0, 0.56);
+            font-size: 20px;
+            text-align: center;
+            padding: 4px;
+            margin-bottom: 4px;
+        }
+
         ol {
             padding: 4px;
             text-align: center;
+
             li {
                 margin: 4px;
                 padding-left: 15%;
                 padding-right: 15%;
                 border: 2px solid gray;
                 background-color: rgba(0, 255, 255, 0.403);
+
                 &:hover {
                     background-color: rgba(146, 146, 146, 0.647);
                     border-color: aqua;
                 }
+
                 a {
                     color: black;
                 }
@@ -198,11 +268,13 @@
 
 //*Sección Descripción Tópicos
 .descripcion {
-    display: grid;
-    grid-template-columns: repeat (auto-fill, minmax (200px,1fr));
-    gap: 20px;
-    .article {
-        padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+
+    .tarjeta-topico {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -210,19 +282,25 @@
         padding: 40px;
         margin: 10px;
         border: 1px solid grey;
+
         h3 {
             text-transform: uppercase;
             width: 100%;
             padding: 15px;
-            background-color: rgba(0, 0, 0, 0.348);}
+            background-color: rgba(0, 0, 0, 0.348);
+        }
+
         p {
             width: 100%;
             margin: 20px 0;
-            font-size: 18px;}
+            font-size: 18px;
+        }
+
         img {
             width: 80%;
-            max-height: 500px ;
-            align-self: center;}
+            max-height: 500px;
+            align-self: center !important;
+        }
     }
 }
 
@@ -231,20 +309,24 @@
 .portada-casos {
     height: 100vh;
     text-align: center;
-    background-image: url(../img/rostro.gif);
+    background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(../img/rostro.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
+
     h1 {
         color: white;
         font-size: 50px;
-        margin: 30px;}
+        margin: 30px;
+    }
+
     p {
         color: white;
-        font-size: 35px;}
+        font-size: 35px;
+    }
 }
 
 //*Sección Presentación Casos
@@ -254,40 +336,49 @@
     flex-direction: column;
     justify-content: stretch;
     align-content: space-between;
+
     div {
         h2 {
-            background-color: rgba(0, 0, 0, 0.488);
+            background-color: rgb(0, 0, 0);
             padding: 30px;
             text-align: center;
-            border: 4px solid white;
-            margin-bottom: 0;}
+            box-shadow: inset 0 0 20px white;
+            margin-bottom: 0;
+        }
+
         .bloques-videos {
             height: 500px;
-            background-image: url(../img/otro.gif);
-            background-position: center;
-            background-size: cover;
-            background-repeat: no-repeat;
+            background: #ffffff;
+            background: linear-gradient(88deg, rgba(255, 255, 255, 1) 18%, rgba(166, 159, 159, 1) 47%, rgba(186, 232, 232, 1) 70%);
             display: flex;
             justify-content: space-between;
             align-items: center;
-            .contenido-videos {
+
+            .contenido-video {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
+
                 h3 {
                     font-size: 2em !important;
                     padding: 20px !important;
-                    background-color: rgba(0, 255, 255, 0.374) !important;}
+                    background-color: rgba(0, 255, 255, 0.374) !important;
+                }
+
                 p {
                     font-size: 1.5rem;
-                    padding: 10px;}
+                    padding: 10px;
+                }
             }
+
             .videos-casos {
                 padding: 20px;
                 background-color: rgba(255, 255, 255, 0.475);
                 box-shadow: -5px -5px 20px rgb(68, 68, 68);
+
                 iframe {
-                    height: 400px;}
+                    height: 400px;
+                }
             }
         }
     }
@@ -302,28 +393,33 @@
     height: 500px;
     text-align: center;
     border: 10px solid black;
+
     h2 {
         color: black;
         padding: 30px;
     }
+
     p {
         font-size: 20px;
     }
+
     .formulario {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: baseline;
         padding: 20px;
+
         label {
             font-size: 1.5rem;
             text-decoration: solid;
             margin: 10px;
-        #testimonio {
-            width: 80%;
-            height: 60px;
-            margin-bottom: 10px;
-        }
+
+            #testimonio {
+                width: 80%;
+                height: 60px;
+                margin-bottom: 10px;
+            }
         }
     }
 }
@@ -332,107 +428,165 @@
 //*Sección Portada Contacto
 .portada-contacto {
     height: 100vh;
-    background-image: url(../img/contacto.jpg);
+    background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(/img/topicos-img.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     text-align: center;
+
     h1 {
         color: black;
-        margin-bottom: 200px;
-        background-color: rgba(0, 0, 0, 0.397);
-        padding: 50px;}
+        font-weight: 800;
+        text-shadow: 0 0 10px white;
+        margin-bottom: 5em;
+        margin-left: 20%;
+        margin-right: 20%;
+        background-color: rgba(0, 0, 0, 0.34);
+        padding: 50px;
+    }
+
     p {
         color: white;
         font-size: 25px;
         text-transform: uppercase;
         background-color: rgba(0, 0, 0, 0.397);
-        margin-left: 100px;
-        margin-right: 100px;
-        padding: 35px;}
+        padding: 35px;
+    }
 }
 
 //*Sección Contacto
 .contacto {
-    height: 400px;
+    height: 500px;
     text-align: center;
+
     h2 {
         color: black;
         font-size: 30px;
         padding: 40px;}
+
     form {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
         gap: 30px;
+
         .form-item {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             padding: 20px;
+            &:nth-child(5) {
+                textarea {
+                height: 80px;
+                width: 120%;
+                font-size: 15px;
+                }}
+
             label {
                 font-size: 1.5rem;}
+
             .input {
                 height: 30px;
                 width: 80%;
-                border-color: aqua;}
-            textarea {
-                height: 80px;
-                width: 600px;
-                font-size: 15px;
+                box-shadow: 4px 4px 10px aqua;
+                }}
+        .enviar {
+            input {
+                color: white;
+                padding: 0.5em 2em 0.5em 2em;
+                background-color: black;
+                border: 2px solid grey;
+                border-radius: 10px;
+                box-shadow: 5px 5px 10px black;
+                margin-top: 5em;
+                transition: 2s;
+                &:hover {
+                    background-color: grey;
+                    padding: 0.5em 4em 0.5em 4em;
+                }
             }
-        }
-        div {
-            &:nth-child(6) {
-                width: 100px;
-                margin: 50px 280px;
-            } 
         }
     }
 }
 
+
 //*Sección Ayuda
 .ayuda {
     min-height: 800px;
-    background-image: url(../img/fondo-ayuda.gif);
+    background-image: url(/img/cerebro.gif);
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
+
     h2 {
         font-size: 30px;
         margin-bottom: 20px;
         background-color: rgba(0, 0, 0, 0.307);
+        box-shadow: inset 0 0 20px white;
         padding: 50px;
-        text-align: center;}
+        text-align: center;
+    }
+
     p {
         font-size: 25px;
         margin-bottom: 20px;
-        text-align: center;}
+        text-align: center;
+    }
+
     div {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        margin: 50px;
-        padding: 50px;
-        border: 30px groove rgba(0, 0, 0, 0.545);
+        margin: 2em;
+        border: 20px groove rgba(0, 0, 0, 0.545);
+
         .tarjeta-psi {
+            width: 25%;
+            background-color: white;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
+            border: 10px groove rgba(0, 0, 0, 0.545);
+;
+
             h3 {
-                font-size: 25px;
-                margin: 10px;}
+                font-size: 25px !important;
+                font-weight: 700 !important;
+                text-align: center;
+                background: #ffffff;
+                background: linear-gradient(88deg, rgba(255, 255, 255, 1) 18%, rgba(166, 159, 159, 1) 47%, rgba(186, 232, 232, 1) 70%);
+                padding: 1rem;
+                width: 100%;
+                text-shadow: 5px 5px 10px black
+            }
+
             img {
                 margin: 10px;
-                border: 2px solid black;}
+                border-radius: 5px;
+                box-shadow: 4px 4px 10px black;
+            }
+
+            .matricula {
+                margin-top: 1em;
+                padding: 0.5rem 3rem 0.5rem 3rem;
+                border: 5px solid aqua;
+                border-radius: 10px;
+            }
+
             p {
                 font-size: 20px;
                 display: flex;
-                justify-content: stretch;
+                justify-content: space-between;
                 align-items: center;
-                img {
-                    border: none;
+
+                i {
+                    font-size: 1.5em;
+                    margin-right: 1rem;
+                    transition: 1.5s;
+                    &:hover {
+                        color: aqua;
+                    }
                 }
             }
         }
@@ -449,12 +603,16 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     text-align: center;
+
     h1 {
-        padding: 80px;}
+        padding: 80px;
+    }
+
     p {
         font-size: 1.5em;
         color: white;
-        margin-top: 5px;}
+        margin-top: 5px;
+    }
 }
 
 //*Sección Nosotros
@@ -462,11 +620,15 @@
     height: auto;
     text-align: center;
     padding: 80px;
+
     h2 {
         background-color: aqua;
-        color: black;}
+        color: black;
+    }
+
     p {
         font-size: 20px;
         margin-left: 8em;
-        margin-right: 8em;}
+        margin-right: 8em;
+    }
 }
