--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -57,65 +57,107 @@
     .contenedor-general {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: space-evenly;
 
         .contenedor-tarjetas {
             display: flex;
             justify-content: space-evenly;
-            align-items: center;
-            margin-top: 2em;
+            align-items: stretch;
+            flex-wrap: wrap;
 
             .tarjeta-concepto {
-                background-color: rgba(0, 0, 0, 0.13);
-                border: 2px solid black;
-                box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.714);
                 width: 25%;
-                height: 20em;
+                height: 25em;
                 margin: 2em;
                 padding: 0.5em;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                align-items: center;
+                perspective: 1000px;
 
-                h3 {
-                    margin-bottom: 0.5em;
-                    color: rgb(2, 19, 19);
-                    font-size: 25px;
+                &:hover .tarjeta-inner {
+                    transform: rotateY(180deg);
                 }
 
-                p {
-                    color: black;
-                    margin-bottom: 1em;
-                    font-size: 18px !important;
-                    background-color: white;
-                    padding: 0.5em;
-                    border-radius: 5px;
-                    box-shadow: 4px 4px 20px aquamarine;
-                }
+                .tarjeta-inner {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    transition: transform 1s ease;
+                    transform-style: preserve-3d;
 
-                a {
-                    color: white;
-                    background-color: black;
-                    width: 80%;
-                    text-align: center;
-                    border-radius: 4px;
-                    padding: 2px;
-                    transition: 2s;
-
-                    &:hover {
-                        background-color: aquamarine;
-                        color: black;
-                        border: 2px solid grey;
+                    .tarjeta-front,
+                    .tarjeta-back {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
                         width: 100%;
+                        height: 100%;
+                        backface-visibility: hidden;
+                        border-radius: 10px;
+                    }
+
+                    .tarjeta-front {
+                        background-color: white;
+                        z-index: 2;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            border-radius: 10px;
+                        }
+                    }
+
+                    .tarjeta-back {
+                        display: flex;
+                        flex-direction: column;justify-content: space-between;
+                        align-items: center;
+                        background-color: rgba(0, 0, 0, 0.13);
+                        transform: rotateY(180deg);
+                        border: 2px solid black;
+                        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.714);
+                        padding: 1em;
+
+                        h3 {
+                            margin-bottom: 0.5em;
+                            color: rgb(2, 19, 19);
+                            font-size: 25px;
+                        }
+
+                        p {
+                            color: black;
+                            margin-bottom: 1em;
+                            font-size: 18px !important;
+                            background-color: white;
+                            padding: 0.5em;
+                            border-radius: 5px;
+                            box-shadow: 4px 4px 20px aquamarine;
+                        }
+
+                        a {
+                            color: white;
+                            background-color: black;
+                            width: 80%;
+                            text-align: center;
+                            border-radius: 4px;
+                            padding: 2px;
+                            transition: 2s;
+
+                            &:hover {
+                                background-color: aquamarine;
+                                color: black;
+                                border: 2px solid grey;
+                                width: 100%;
+                            }
+                        }
                     }
                 }
             }
         }
+        .boton {
+            align-self: center;
+        }
     }
 }
+
 
 //*Sección Casos
 .casos {
