retoque final ruta

--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -42,7 +42,7 @@
 //*Sección Tópicos
 .topicos {
     min-height: 650px;
-    background-image: url(/img/otro.gif);
+    background-image: url(../img/otro.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
