--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -430,7 +430,7 @@
 #testimonios {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     margin: 5px;
     height: 500px;
     text-align: center;
@@ -438,11 +438,13 @@
 
     h2 {
         color: black;
-        padding: 30px;
+        padding: 1rem;
+        margin-bottom: 0;
     }
 
     p {
         font-size: 20px;
+        margin-bottom: 0;
     }
 
     .formulario {
@@ -450,21 +452,24 @@
         flex-direction: column;
         justify-content: space-evenly;
         align-items: baseline;
-        padding: 20px;
+        padding: 10px;
 
         label {
             font-size: 1.5rem;
-            text-decoration: solid;
-            margin: 10px;
+            font-weight: 700;
+            margin: 10px;}
 
-            #testimonio {
-                width: 80%;
-                height: 60px;
-                margin-bottom: 10px;
-            }
-        }
+        .input {
+            box-shadow: 4px 4px 10px aqua !important;}
+
+        textarea {
+            width: 80%;
+            height: 60px;
+            margin-bottom: 2em;
+            box-shadow: 4px 4px 10px aqua;}
     }
 }
+
 
 //*----CONTACTO----
 //*Sección Portada Contacto
