--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -18,28 +18,27 @@ ol { list-style: none;}
 
 //*MEDIDAS H
 h1 {
-    color: white;
-    font-size: 50px;}
+    color: $color-secundario;
+    font-size: nth($sizes, 9);}
 h2 {
-    color: white;
-    font-size: 30px;}
+    color: $color-secundario;
+    font-size: nth($sizes, 7);}
 
 //*BOTON
 .boton {
-    display: inline-block !important;
     margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem !important;
     a {
-        color: white;
-        background-color: rgb(0, 0, 0);
+        color: $color-secundario;
+        background-color: $color-principal;
         font-size: 20px; 
         text-decoration: none; 
-        border-radius: 2px;
-        box-shadow: inset 0 0 4px white;
-        padding: 10px 15px 10px 15px;
+        border-radius: nth($sizes, 6);
+        box-shadow: inset 0 0 nth($sizes, 2) $color-secundario;
+        padding: nth($sizes, 4) nth($sizes, 5) nth($sizes, 4) nth($sizes, 5);
         transition: 1s;
         &:hover {
-            background-color: grey;
+            background-color: $color-terciario;
         }
     }
 }
