--- a/scss/base/_mq.scss
+++ b/scss/base/_mq.scss
@@ -1,20 +1,120 @@
+@media screen and (max-width: 1446px) {
+
+    //*Casos
+    .contenido-video {
+        h3 {
+            font-size: 1.8rem !important;
+            padding: 0.5em !important;
+        }
+
+        p {
+            font-size: 1.5rem !important;
+            padding: 0.5rem !important;
+        }
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    //*Index
+    .casos {
+        height: 750px;
+        .bloque-casos-catarsis {
+            height: 650px;
+            h3 {
+                margin-top: 0.5em;
+            }
+            .carousel {
+                margin-top: 0;
+            }
+        }
+    }
+
+    //*Casos
+    .bloques-videos {
+        height: 50em !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly !important;
+        align-items: center;
+
+        .contenido-video {
+            text-align: center;
+        }
+    }
+}
+@media screen and (max-width: 1260px) {
+    //*Contacto
+    .contacto {
+        height: auto;
+        form {
+            gap: 5px !important;
+            margin-bottom: 1em;
+        }
+    }
+    .ayuda {
+        div {
+            flex-direction: column;
+            height: fit-content;
+            .tarjeta-psi {
+                flex-direction: row;
+                width: 90%;
+                margin: 0.5em;
+                h3 {
+                    width: 20%;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 1100px) {
 
     //*Index
     .contenedor-general {
         .contenedor-tarjetas {
-            display: flex;
-            justify-content: center;
-        }
+            justify-content: center !important;
+            flex-wrap: nowrap !important;
 
-        .tarjeta-concepto {
-            margin: 1em;
-            min-height: initial;
-            width: 30%;
+            .tarjeta-concepto {
+                height: 30em !important;
+                width: 30%!important;
+                margin: 5px !important;
+            }
         }
-
+        
         .boton {
             margin-top: 5em;
+        }
+    }
+    //*Contacto
+    .ayuda {
+        div {
+            .tarjeta-psi {
+                .matricula {
+                    padding: 2px !important;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    //*Contacto
+    .ayuda {
+        div {
+            .tarjeta-psi {
+                flex-wrap: wrap;
+                h3 {
+                    font-size: 1.2em;
+                }
+                img {
+                    width: 8em;
+                    height: 8em ;
+                }
+                .matricula {
+                    font-size: 1em;
+                }
+            }
         }
     }
 }
@@ -36,35 +136,27 @@
         h2 {
             font-size: 1.5em;
         }
-
-        .contenedor-general {
-            .contenedor-tarjetas {
-                display: flex;
-                justify-content: space-evenly;
-
-                .tarjeta-concepto {
-                    margin: 0;
-
-                    p {
-                        font-size: 1em !important;
-                    }
-                }
-            }
-        }
     }
 
     .casos {
+        background-image: none;
         h2 {
             font-size: 1.5em;
         }
 
         .bloque-casos-catarsis {
             width: 100%;
-            margin-bottom: 1em;
+            margin-top: 0;
+            justify-content: space-between;
+            h3 {
+                margin: 0.5em;
+            }
 
             .carousel {
                 width: 80%;
-                margin-bottom: 0.5em;
+                margin-bottom: 0.2em;
+                margin-left: 0;
+                align-self: center;
             }
         }
     }
@@ -114,6 +206,26 @@
         }
     }
 
+    //*Casos
+    .presentacion-casos {
+        div {
+            .bloques-videos {
+                .videos-casos {
+                    width: 95%;
+                    height: 50%;
+                    padding: 10px;
+                    margin-bottom: 1em;
+
+                    iframe {
+                        width: 100% !important;
+                        height: 100% !important;
+                    }
+                }
+            }
+        }
+    }
+
+
     //*Acerca de
     .nosotros p {
         margin-left: 0.5em;
@@ -121,7 +233,14 @@
     }
 }
 
-@media screen and (max-width: 755px) {
+@media screen and (max-width: 917px) {
+    //*Casos
+    #testimonios {
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 795px) {
     header {
         height: max-content;
 
@@ -136,6 +255,7 @@
             border: 1px solid rgb(75, 75, 75);
             box-shadow: inset 0 0 10px aqua;
             margin-left: auto;
+            margin-right: 6px !important;
         }
 
         .menu-hamburguesa-checkbox:checked~nav ul {
@@ -148,11 +268,11 @@
                 flex-direction: column;
                 background-color: rgba(255, 255, 255, 0.666);
                 position: absolute;
-                top: 70px;
+                top: 80px;
                 right: 0;
-                width: 30%;
+                width: 10em;
                 height: 300px;
-                text-align: center;
+                text-align: left;
 
                 li {
                     margin-top: 1em;
@@ -160,7 +280,7 @@
 
                     a {
                         color: black;
-                        padding: 1em;
+                        padding: 0.5em;
                     }
                 }
             }
@@ -178,18 +298,26 @@
         .contenedor-tarjetas {
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
+            justify-content: center !important;
 
             .tarjeta-concepto {
-                margin: 1em;
+                margin: 0 auto !important;
                 height: 40%;
-                width: 80%;
+                width: 80% !important;
+                .tarjeta-inner {
+                    .tarjeta-back {
+                        p {
+                            padding: 4em !important;
+                            text-align: center;
+                        }
+                    }
+                }
             }
+        }
 
-            .boton {
-                margin-top: 2em;
-                margin-bottom: 2em;
-            }
+        .boton {
+            margin-top: 2em;
+            margin-bottom: 2em;
         }
     }
 
@@ -223,8 +351,106 @@
             display: none;
         }
     }
-}
+    //*Casos
+    .presentacion-casos {
+        div {
+            h2 {
+                font-size: 1.7em;
+                padding: 1rem;
+            }
+            .bloques-videos {
+                .contenido-video {
+                    h3 {
+                        font-size: 1.5rem !important;
+                    }
+                    p {
+                    font-size: 1.2rem !important;}
+                }
+            }
+        }
+    }
 
+     //*Contacto
+    .portada-contacto {
+        h1 {
+            font-size: 2em;
+        }
+        p {
+            font-size: 1.2em;
+        }
+    }
+    .contacto {
+        form {
+            margin: 2em;
+            label {
+                font-size: 1.2em !important;}
+            .enviar {
+                input {
+                    margin-top: 5px !important;
+                }
+            }
+        }
+    }
+    .ayuda {
+        h2 {
+            font-size: 1.5em !important;
+        }
+        p {
+            font-size: 1.2rem !important;
+        }
+        div{
+            .tarjeta-psi {
+                flex-wrap: nowrap;
+                flex-direction: column;
+                width: 80%;
+                h3 {
+                    width: 100%;
+                }
+            }
+        }
+    }
+    //*Acerca de
+    .portada-acerca-de {
+        p {
+            margin: 10px 20px 10px 20px !important;
+        }
+    }
+}
+@media screen and (max-width: 580px){
+    header {
+        p {
+            font-size: 30px !important;
+        }
+
+        nav {
+            ul {
+                width: 10rem;}
+        }
+    }
+
+    //*Index
+    .contenedor-general {
+        .contenedor-tarjetas {
+            .tarjeta-concepto {
+                .tarjeta-inner {
+                    .tarjeta-back {
+                        p {
+                            padding: 1em !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .casos {
+        .bloque-casos-catarsis {
+            justify-content: space-evenly;
+            .carousel {
+                width: 90%;
+            }
+        }
+    }
+}
 @media screen and (max-width: 460px) {
     header {
         height: 60px;
@@ -236,30 +462,60 @@
         p {
             font-size: 20px !important;
         }
-    }
-}
 
-footer {
-    height: 60px;
-    a {
-        margin-top: 0.2em;
-        margin-bottom: 0.5em;
-        i {
-            font-size: 40px;
+        nav {
+            ul {
+                top: 60px;
+                height: 200px;
+                li {
+                    margin: 0.5em;
+                }
+            }
+        }
+    }
+
+
+    footer {
+        height: 60px !important;
+            i {
+                font-size: 40px !important;
+            }
+        }
+
+    //*Casos
+    .portada-casos {
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 2em;
+        }
+        p {
+            font-size: 1.5em;
+        }
+    }
+
+    //Contacto
+    .contacto {
+        form {
+            margin-left: 5px !important;
+        }
+    }
+    .ayuda {
+        div {
+            margin: 0.5em !important;
+            
+        }
+    }
+
+    //*Acerca de
+    .nosotros {
+        padding: 2em;
+
+        p {
+            margin-left: 0;
+            margin-right: 0;
         }
     }
 }
-
-//*Acerca de
-.nosotros {
-    padding: 2em;
-
-    p {
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
 @media screen and (max-width: 400px) {
 
     //Index
@@ -277,6 +533,25 @@ footer {
 
         p {
             font-size: 1.2em;
+        }
+    }
+
+    //*Casos
+    #testimonios {
+        h2 {
+            font-size: 1.5em;
+        }
+        p {
+            font-size: 1em;
+        }
+    }
+
+    //*Contacto
+    .contacto {
+        form {
+            .form-item {
+                width: 90%;
+            }
         }
     }
 
