--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -40,7 +40,7 @@
 //*Sección Tópicos
 .topicos {
     min-height: 6nth($sizes, 9);
-    background-image: url(../img/otro.gif);
+    background-image: url(../img/fondo-tarjetas.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -76,7 +76,7 @@
                     position: relative;
                     width: 100%;
                     height: 100%;
-                    transition: transform 1s ease;
+                    transition: transform 2s ease;
                     transform-style: preserve-3d;
 
                     .tarjeta-front,
@@ -157,13 +157,10 @@
 //*Sección Casos
 .casos {
     height: 950px;
-    background-image: url(../img/relojarena.png);
-    background-position: right;
-    background-size: auto;
-    background-repeat: no-repeat;
+    background: radial-gradient(circle, rgb(225, 225, 225, 1), rgba(166, 159, 159, 1), rgba(82, 229, 229));
 
     h2 {
-        background-color: $color-terciario;
+        background-color: $color-principal;
         padding: nth($sizes, 7);
         text-align: center;
         margin-bottom: 0 !important;
@@ -190,11 +187,11 @@
         .carousel {
             width: 60%;
             margin-bottom: 1em;
-            align-self: flex-start;
+            align-self: center;
             margin-left: nth($sizes, 8);
-            transition: 3s;
+            transition: transform 3s ease;
             &:hover {
-                width: 70%;
+                transform: scaleX(1.2);
             }
 
             .carousel-inner {
@@ -360,7 +357,7 @@
 
 //*Sección Presentación Casos
 .presentacion-casos {
-    min-height: 1000px;
+    min-height: 2000px;
     @include flex (flex, column, stretch);
     align-content: space-between;
 
@@ -457,7 +454,7 @@
 //*Sección Portada Contacto
 .portada-contacto {
     height: 100vh;
-    background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(../img/topicos-img.gif);
+    background: linear-gradient(rgba(142, 142, 142, 0.671), rgba(33, 33, 33, 0.6)), url(../img/contacto.gif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
